--- a/.eslintignore
+++ b/.eslintignore
@@ -7,3 +7,4 @@ Gruntfile.js
 **/intl-tel-input/utils.js
 site/static/js/highlight.min.js
 site/static/js/silktide-consent-manager.js
+site/src/examples/js/*_display_code*
